kustomize/web/overlays/prod/service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: ExternalName
  externalName: temporal-sa.s3.amazonaws.com
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 443
